<resources>
    <string name="app_name">Acmezon-Dash</string>
    <string name="connection">Connection</string>
    <string name="bluetooth_title">Connect to chosen device</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_loading">Connecting…</string>
    <string name="bluetooth_needed">You need to connect to Dash first</string>
    <string name="cancel">Cancel</string>
    <string name="bluetooth_connected">Connection made successfully</string>
    <string name="bluetooth_cant_connect">Impossible to connect</string>
    <string name="bluetooth_menu_refresh">Search</string>
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Save to cart</string>
    <string name="login_cancel">Cancel</string>
    <string name="error_bad_params">Error: Bad params.</string>
    <string name="error_authentication">Error: Authentication unsuccessful.</string>
    <string name="error_server">Error: Internal Server Error.</string>
    <string name="connect_dash">Connect</string>
    <string name="get_last_cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="exit">Exit</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete_title">Delete</string>
    <string name="delete_subtitle">Are you sure you want to delete</string>
    <string name="cart">Shopping cart</string>
    <string name="shopping_cart_loading">Receiving Cart…</string>
    <string name="empty_device_name"><![CDATA[<New device>]]></string>
    <string name="swipe_please">Device list not updated.\nPlease swipe down the screen to scan the devices around you.</string>
    <string name="domain">http://acmezon.ddns.net:8080</string>
    <string name="get_cart">Get last cart</string>
    <string name="no_products">Can\'t connect to Acme-Supermarket or there are no valid products in the cart.</string>
    <string name="pay">Send to system</string>
    <string name="delete_cart">Delete cart</string>
    <string name="delete_cart_dialog_title">Delete cart</string>
    <string name="delete_cart_dialog_text">Are you sure you want to delete the current shopping cart? This operation can not be undone</string>
    <string name="delete_cart_error">The shopping cart could not be deleted</string>
    <string name="error_receive_cart">Error receiving shopping cart</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="past_cart">Past carts</string>
    <string name="past_cart_desc">Get other carts</string>
    <string name="submit_success">The shopping cart has been successfully submited</string>
    <string name="error_not_available_product">Error: Some product was not available</string>
    <string name="cart_file">Cart file</string>
    <string name="cart_file_desc">Create cart file</string>
    <string name="cart_file_created">Cart file created</string>
    <string name="past_cart_empty">There are no old shopping carts in the dash</string>
    <string name="past_carts_loading">Receiving past carts…</string>
    <string name="past_cart_error">Error receiving carts</string>
    <string name="past_cart_parse_error">Error parsing date</string>
    <string name="restore_cart">Restore this cart</string>
    <string name="restore_cart_subtitle">Are you sure you want to restore this cart?\\nThis will be overwrite the current cart in the phone</string>
    <string name="cart_restored">Shopping cart restored</string>
    <string name="delete_past_cart">Delete old cart</string>
    <string name="delete_past_cart_subtitle">Are you sure you want to delete an old cart?\n This can not be undone</string>
    <string name="delete_past_cart_loading">Deleting cart…</string>
    <string name="past_cart_delete_ok">Cart successfully deleted</string>
    <string name="remove_account">Account</string>
    <string name="remove_account_desc">Unlink account</string>
    <string name="account_removed">Account unlinked</string>
    <string name="account_removed_false">The account could not be unlinked</string>
    <string name="remember_me">Remember me</string>
    <string name="sending_cart_loading">Sending cart…</string>
    <string name="remove_account_subtitle">Are you sure you want to unlink your account?</string>
    <string name="removing_account">Unlinking account…</string>
    <string name="help_title">Help</string>
    <string name="help_desc">If you need any help, you can contact us in the following email address:</string>
    <string name="corporate_mail">example@acmezon.com</string>
    <string name="visit_us">Please, visit us in the following link:</string>
    <string name="site_link">http://acmezon.ddns.net:8080</string>
</resources>
