<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp"
    tools:context="com.acmezon.acmezon_dash.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/input_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_email"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/login_title"
        android:layout_alignLeft="@+id/input_password"
        android:layout_alignStart="@+id/input_password"
        android:textSize="@dimen/abc_text_size_large_material" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:layout_below="@+id/input_email"
        android:layout_marginTop="63dp"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:id="@+id/submit_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/notification_large_icon_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/cancel_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/notification_large_icon_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_cancel"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/submit_btn"
        android:layout_toEndOf="@+id/submit_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_below="@+id/input_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
